--- a/Index.html
+++ b/Index.html
@@ -638,9 +638,9 @@
 
         <div class="lengende" id="lengende">
 
-            <label class="label_ label_berlin cal_x" id="berlin_Urlaubstage" for="text">Berlin</label>
+            <label class="label_ label_berlin cal_x" id="berlin_Urlaubstage" for="text">Kita</label>
 
-            <label class="label_ label_brandenburg cal_y" id="brandenburg_Urlaubstage" for="text">Brandenburg</label>
+            <label class="label_ label_brandenburg cal_y" id="brandenburg_Urlaubstage" for="text">Nötzold</label>
 
             <label class="label_ label_sophie cal_sophie" id="sophie_Urlaubstage" for="text">Sophie (+30)</label>
             
