--- a/Index.html
+++ b/Index.html
@@ -10,11 +10,11 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            overflow: hidden;
+            /* overflow: hidden; */
 
         }
 
-
+ 
 
 
         .titel {
@@ -63,11 +63,12 @@
 
         .month {
 
-            padding: 1px;
+            padding: 0px;
             text-align: center;
             justify-content: center;
             font-size: 20px;
             width: 100%;
+            border: none ;
 
 
 
@@ -88,9 +89,9 @@
         .day {
             display: flex;
             justify-content: flex-end;
-            padding: 0px;
+            /* padding: 1px; */
             width: 100%;
-            height: 3%;
+            height: 2.8%;
             font-size: 50%;
             border: solid 1px;
             border-color: #dcdcdc;
@@ -111,8 +112,7 @@
 
         .Labelx {
             width: 65%;
-            border: solid 1px;
-            border-color: #ffffff;
+            border: none;
             font-size: 12px;
 
 
@@ -124,10 +124,11 @@
             justify-content: flex-end;
             padding: 0px;
             width: 100%;
-            height: 3%;
+            height: 2.8%;
             font-size: 50%;
-            border: solid 2px;
+            border: solid 1px;
             border-color: #ea1212;
+            z-index: 1;
 
       
 
