--- a/Index.html
+++ b/Index.html
@@ -129,7 +129,7 @@
         }
 
         .BG_green {
-            background-color: rgb(107, 218, 38); 
+            background-color: rgb(107, 218, 38);
         }
 
         .ferien {
@@ -177,19 +177,72 @@
 
         }
 
-        .form1 {
+        .form1_class {
+
+            /* ändern --none*/
             display: none;
-            justify-content: flex-end;
+            flex-direction: column;
+
+            justify-content: last baseline;
 
             background-color: rgb(255, 255, 255);
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 30%;
-            height: 30%;
+            width: 20%;
+            height: 10%;
             box-shadow: 0px 0px 50px;
+            border: 1px solid black;
         }
+
+        .form1Div0 {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            gap: 3px;
+            /* border: 1px solid black; */
+        }
+
+        .form1Div1 {
+            display: flex;
+            border-color: white;
+            justify-content: flex-end;
+            align-items: left;
+            gap: 3px;
+            padding: 10px
+                /* border: 1px solid black; */
+        }
+
+        .label_form1 {
+            width: 30%;
+        }
+
+        .rot {
+            background-color: rgb(236, 90, 90);
+            border: none;
+        }
+
+        .gruen {
+            background-color: green;
+            border: none;
+        }
+
+        .blau {
+            background-color: rgb(67, 67, 246);
+            border: none;
+        }
+
+        .lila {
+            background-color: rgb(239, 55, 239);
+            border: none;
+        }
+
+        .gelb {
+            background-color: yellow;
+            border: none;
+        }
+
 
 
         .formEmaitext {
@@ -252,10 +305,11 @@
 
         .closeButtony {
 
-            justify-content: flex-end;
+            justify-content: center;
             align-items: flex-end;
+            padding: 1%;
             background-color: rgb(234, 102, 65);
-            height: 10%;
+            height: 95%;
             margin: 2px;
             width: 5%;
             border: 1px solid black;
@@ -278,6 +332,13 @@
 
             margin: 10px;
         }
+
+
+        .Button_form1_farbe {
+
+            height: 100%;
+            width: 20%;
+        }
     </style>
 
     <script>
@@ -292,7 +353,7 @@
         let meinArray = []
         cal_niko_text = []
 
-        let Table_all = ['cal_niko', 'cal_niko_text', 'cal_sophie', 'cal_x', 'cal_y'];
+        let Table_all = ['cal_niko', 'cal_niko_text', 'cal_sophie', 'cal_x', 'cal_y', 'Datum_farbe', 'Textfeld_farbe'];
         let wochentage = ['So', 'Mo', 'Di', 'Mi', 'Do', 'Fr', 'Sa'];
 
         const monate = [
@@ -404,11 +465,19 @@
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
         function Labelx_aendern(day_id, text_x) {
-
             Schreiben('cal_niko_text', day_id, text_x)
-
         }
 
+        ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+        function Datum_farbe_aendern(day_id, farbe) {
+            Schreiben('Datum_farbe', day_id, farbe)
+        }
+        ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+        function Textfeld_farbe_aendern(day_id, farbe) {
+            Schreiben('Textfeld_farbe', day_id, farbe)
+        }
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
         function Urlaub_zählen() {
@@ -444,8 +513,8 @@
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
         function openform(day_id) {
-            document.querySelector(".form1").style.display = "flex";
-            document.getElementById("label_form1").innerHTML = day_id;
+            document.querySelector(".form1_class").style.display = "Flex";
+            localStorage.setItem("day_id", day_id)
 
         }
 
@@ -500,8 +569,16 @@
                     Tag = 'T' + s_day + 'M' + s_month
                     /////////////////
 
+                    //Wochentag farbe auslesen
+                    let cal_Textfeld_farbe = JSON.parse(localStorage.getItem('Textfeld_farbe'))
+                    let ARR_Textfeld_farbe = cal_Textfeld_farbe.filter(element => element.day_id === Tag)[0][AusgewähltesJahr]
+                    if (ARR_Textfeld_farbe !== '0' && ARR_Textfeld_farbe !== null && ARR_Textfeld_farbe !== undefined && ARR_Textfeld_farbe !== '') { var Textfeld_farbe = ARR_Textfeld_farbe }
+                    else { var Textfeld_farbe = '' }
+
+
+
                     //Wochenenden bestimmen
-                    var TagFormat = '<div class = "daysFormat BC_green" onclick="openform(\'' + Tag + '\')">'
+                    var TagFormat = '<div class = "daysFormat ' + Datum_farbe + ' " onclick="openform(\'' + Tag + '\')">'
                     if (new Date(AusgewähltesJahr, month, day).getDay() == 0 || new Date(AusgewähltesJahr, month, day).getDay() == 6) {
                         var TagFormat = '<div class = "daysFormat Wochenende" onclick="openform(\'' + Tag + '\')">'
                     }
@@ -533,8 +610,15 @@
                     if (ARR_sophie === 1) { var FerienSophie = '<button id="' + Tag + '_Ferien_cal_sophie_id" title="Ferien Sophie" class="FerieButton cal_sophie" onclick="ferien_click(\'cal_sophie\', \'' + Tag + '\')"></button>'; }
 
                     //////////////////
+
+                    //Datum farbe auslesen
+                    let cal_Datum_farbe = JSON.parse(localStorage.getItem('Datum_farbe'))
+                    let ARR_Datum_farbe = cal_Datum_farbe.filter(element => element.day_id === Tag)[0][AusgewähltesJahr]
+                    if (ARR_Datum_farbe !== '0' && ARR_Datum_farbe !== null && ARR_Datum_farbe !== undefined && ARR_Datum_farbe !== '') { var Datum_farbe = ARR_Datum_farbe }
+                    else { var Datum_farbe = '' }
+
                     //text kommt von cal_niko_text
-                    Labelx_mitText = '<input id= "' + Tag + '_Lable' + '" onchange="Labelx_aendern(\'' + Tag + '\', this.value)" class="Labelx" type="text" value="">'
+                    Labelx_mitText = '<input id= "' + Tag + '_Lable' + '" onchange="Labelx_aendern(\'' + Tag + '\', this.value)" class="Labelx ' + Textfeld_farbe + '" type="text" value="">'
                     let cal_niko_text = JSON.parse(localStorage.getItem('cal_niko_text'))
                     let ARR_niko_text = cal_niko_text.filter(element => element.day_id === Tag)[0][AusgewähltesJahr]
                     if (ARR_niko_text !== '0' && ARR_niko_text !== null && ARR_niko_text !== '') {
@@ -604,10 +688,31 @@
 
 <body onload="readDB()">
 
-    <form class="form1" id="form1">
-        <button class="closeButtony"
-            onclick="(() => { event.preventDefault(); document.querySelector('.form1').style.display = 'none'; })()">X</button>
-        <label id="label_form1" for="">ein test</label>
+    <form class="form1_class" id="form1">
+        <div class="form1Div0">
+            <button class="closeButtony"
+                onclick="(() => { event.preventDefault(); document.querySelector('.form1_class').style.display = 'none'; })()">X</button>
+        </div>
+
+        <Div class="form1Div1">
+            <label class="label_form1" for="">Datum</label>
+            <button class="Button_form1_farbe rot"  onclick="(() => { event.preventDefault();Datum_farbe_aendern(localStorage.getItem('day_id'),'rot') })()">rot</button>
+            <button class="Button_form1_farbe blau" onclick="(() => { event.preventDefault() })()">blau</button>
+            <button class="Button_form1_farbe lila" onclick="(() => { event.preventDefault() })()">lila</button>
+            <button class="Button_form1_farbe gruen" onclick="(() => { event.preventDefault() })()">grün</button>
+            <button class="Button_form1_farbe gelb" onclick="(() => { event.preventDefault() })()">gelb</button>
+            <button class="Button_form1_farbe " onclick="(() => { event.preventDefault() })()">keine</button>
+        </Div>
+
+        <Div class="form1Div1">
+            <label class="label_form1" for="">Textfeld</label>
+            <button class="Button_form1_farbe rot" onclick="(() => { event.preventDefault() })()">rot</button>
+            <button class="Button_form1_farbe blau" onclick="(() => { event.preventDefault() })()">blau</button>
+            <button class="Button_form1_farbe lila" onclick="(() => { event.preventDefault() })()">lila</button>
+            <button class="Button_form1_farbe gruen" onclick="(() => { event.preventDefault() })()">grün</button>
+            <button class="Button_form1_farbe gelb" onclick="(() => { event.preventDefault() })()">gelb</button>
+            <button class="Button_form1_farbe " onclick="(() => { event.preventDefault() })()">keine</button>
+        </Div>
     </form>
 
 
