--- a/Index.html
+++ b/Index.html
@@ -696,6 +696,7 @@
 
         <Div class="form1Div1">
             <label class="label_form1" for="">Datum</label>
+            <!-- hier noch alle buttons ändern und lokal ändern -->
             <button class="Button_form1_farbe rot"  onclick="(() => { event.preventDefault();Datum_farbe_aendern(localStorage.getItem('day_id'),'rot') })()">rot</button>
             <button class="Button_form1_farbe blau" onclick="(() => { event.preventDefault() })()">blau</button>
             <button class="Button_form1_farbe lila" onclick="(() => { event.preventDefault() })()">lila</button>
