--- a/Index.html
+++ b/Index.html
@@ -343,6 +343,10 @@
             height: 100%;
             width: 20%;
         }
+
+        select option:selected {
+            background-color: #fff;
+        }
     </style>
 
     <script>
