--- a/Index.html
+++ b/Index.html
@@ -38,6 +38,7 @@
         .Jahresauswahl {
             display: flex;
             justify-content: flex-start;
+            background-color: #fff;
         }
 
         select {
